--- a/index.html
+++ b/index.html
@@ -108,9 +108,63 @@
       <!-- окончание страницы мы лучшие -->
       <!-- начало секции бургеры-->
       <section class="section burgers">
-         <div class="container container__burgers">
-
-
+         <div class="container">
+            <div class="burgers__slider">
+               <div class="slider-block">
+                  <a href="" class="arrow-left" id="left" ></a>
+               </div>
+               <div class="slider-block">
+                  <div class="slider-block__active" id="slider">
+                     <div class="slide-elem">
+                        <div class="slide-elem__leftside">
+                           <!-- <img src="./img/steam_hello.png" alt=""> -->
+                           <div class="weight"></div>
+                           <div class="kcal"></div>
+                        </div>
+                        <div class="slide-elem__rightside">
+                           <h1 class="rightside__title">dark beef burger</h1>
+                           <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                           <div class="rightside__price"> 500 <p>рублей</p>
+                              <button class="rightside__price-button"></button>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="slide-elem">
+                        <div class="slide-elem__leftside">
+                           <!-- <img src="./img/steam_hello.png" alt=""> -->
+                           <div class="weight"></div>
+                           <div class="kcal"></div>
+                        </div>
+                        <div class="slide-elem__rightside">
+                           <h1 class="rightside__title">dark beef burger</h1>
+                           <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками
+                              нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                           <div class="rightside__price"> 1000 <p>рублей</p>
+                              <button class="rightside__price-button"></button>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="slide-elem">
+                        <div class="slide-elem__leftside">
+                           <!-- <img src="./img/steam_hello.png" alt=""> -->
+                           <div class="weight"></div>
+                           <div class="kcal"></div>
+                        </div>
+                        <div class="slide-elem__rightside">
+                           <h1 class="rightside__title">dark beef burger</h1>
+                           <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками
+                              нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                           <div class="rightside__price"> 1500 <p>рублей</p>
+                              <button class="rightside__price-button"></button>
+                           </div>
+                        </div>
+                     </div>
+                  </div>
+               </div>
+               <div class="slider-block">
+                  <a href="" class="arrow-right" id="right" ></a>
+               </div>
+            </div>
          </div>
       </section>
       <!-- окончание секции бургеры -->
@@ -486,6 +540,7 @@
       </ul>
       <!-- окончание fixed menu -->
    </div>
+   <script src="./script.js"></script>
 </body>
 
 </html>
