--- a/index.html
+++ b/index.html
@@ -155,9 +155,11 @@
                   <div class="slider-block__active" id="slider">
                      <div class="slide-elem">
                         <div class="slide-elem__leftside">
-                           <!-- <img src="./img/steam_hello.png" alt=""> -->
-                           <div class="weight"></div>
-                           <div class="kcal"></div>
+                           <div class="bbb">
+                              <img src="./img/steam_hello.png" alt="">
+                              <!-- <div class="weight"></div> -->
+                              <!-- <div class="kcal"></div> -->
+                           </div>
                         </div>
                         <div class="slide-elem__rightside">
                            <h1 class="rightside__title">dark beef burger</h1>
@@ -169,9 +171,9 @@
                      </div>
                      <div class="slide-elem">
                         <div class="slide-elem__leftside">
-                           <!-- <img src="./img/steam_hello.png" alt=""> -->
-                           <div class="weight"></div>
-                           <div class="kcal"></div>
+                           <img src="./img/steam_hello.png" alt="">
+                           <!-- <div class="weight"></div> -->
+                           <!-- <div class="kcal"></div> -->
                         </div>
                         <div class="slide-elem__rightside">
                            <h1 class="rightside__title">dark beef burger</h1>
@@ -184,9 +186,9 @@
                      </div>
                      <div class="slide-elem">
                         <div class="slide-elem__leftside">
-                           <!-- <img src="./img/steam_hello.png" alt=""> -->
-                           <div class="weight"></div>
-                           <div class="kcal"></div>
+                           <img src="./img/steam_hello.png" alt="">
+                           <!-- <div class="weight"></div> -->
+                           <!-- <div class="kcal"></div> -->
                         </div>
                         <div class="slide-elem__rightside">
                            <h1 class="rightside__title">dark beef burger</h1>
