--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
                   <div class="form__column">
                      <label class="form__block-area">
                         <div class="form__block-title">Комментарий</div>
-                        <textarea class="form__input"></textarea>
+                        <textarea class="form__input-textarea"></textarea>
                      </label>
                      <div class="radio__section">
                         <label class="radio">
@@ -514,7 +514,7 @@
          <div class="container container__contacts">
             <footer class="footer">
                <address class="footer__contacts-tel">
-                  <h3>Санкт-Петербург,ул.Бабушкина,д.12/1,15</h3>
+                  <h3>Санкт-Петербург,ул.Бабушкина,д.12/1-15</h3>
                   <svg class="footer__phone">
                      <use xlink:href="./css/layout/sprite.svg#phone"></use>
                   </svg>
