--- a/index.html
+++ b/index.html
@@ -147,64 +147,62 @@
       <!-- начало секции бургеры-->
       <section class="section burgers">
          <div class="container">
-            <div class="burgers__slider">
-               <div class="slider-block">
-                  <a href="" class="arrow-left" id="left" ></a>
-               </div>
-               <div class="slider-block">
-                  <div class="slider-block__active" id="slider">
-                     <div class="slide-elem">
-                        <div class="slide-elem__leftside">
-                           <div class="bbb">
-                              <img src="./img/steam_hello.png" alt="">
-                           <!-- <div class="weight"></div> -->
-                           <!-- <div class="kcal"></div> -->
-                           </div>
+            <div class="burgers__menu">
 
-                        </div>
-                        <div class="slide-elem__rightside">
-                           <h1 class="rightside__title">dark beef burger</h1>
-                           <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
-                           <div class="rightside__price"> 500 <p>рублей</p>
-                              <button class="rightside__price-button"></button>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="slide-elem">
-                        <div class="slide-elem__leftside">
-                           <img src="./img/steam_hello.png" alt="">
-                           <!-- <div class="weight"></div> -->
-                           <!-- <div class="kcal"></div> -->
-                        </div>
-                        <div class="slide-elem__rightside">
-                           <h1 class="rightside__title">dark beef burger</h1>
-                           <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками
-                              нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
-                           <div class="rightside__price"> 1000 <p>рублей</p>
-                              <button class="rightside__price-button"></button>
-                           </div>
-                        </div>
-                     </div>
-                     <div class="slide-elem">
-                        <div class="slide-elem__leftside">
-                           <img src="./img/steam_hello.png" alt="">
-                           <!-- <div class="weight"></div> -->
-                           <!-- <div class="kcal"></div> -->
-                        </div>
-                        <div class="slide-elem__rightside">
-                           <h1 class="rightside__title">dark beef burger</h1>
-                           <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками
-                              нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
-                           <div class="rightside__price"> 1500 <p>рублей</p>
-                              <button class="rightside__price-button"></button>
-                           </div>
-                        </div>
-                     </div>
+                  <div class="arrowLeft">
+                     <a href="" class="arrow-left" id="left"></a>
                   </div>
-               </div>
-               <div class="slider-block">
-                  <a href="" class="arrow-right" id="right" ></a>
-               </div>
+
+                  <div class="slider__block">
+                     <ul class="slider-block__active" id="slider">
+                        <li class="slide-elem">
+                           <div class="slide-elem__leftside">
+                                 <img class="leftside__img" src="./img/steam_hello.png" alt="">
+                           </div>
+                           <div class="slide-elem__rightside">
+                              <h1 class="rightside__title">dark beef burger</h1>
+                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя
+                                 кусочками нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                              <div class="rightside__price"> 500 <p>рублей</p>
+                                 <button class="rightside__price-button"></button>
+                              </div>
+                           </div>
+                        </li>
+                        <li class="slide-elem">
+                           <div class="slide-elem__leftside">
+                              <img class="leftside__img" src="./img/steam_hello.png" alt="">
+                           </div>
+                           <div class="slide-elem__rightside">
+                              <h1 class="rightside__title">dark beef burger</h1>
+                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя
+                                 кусочками
+                                 нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                              <div class="rightside__price"> 1000 <p>рублей</p>
+                                 <button class="rightside__price-button"></button>
+                              </div>
+                           </div>
+                        </li>
+                        <li class="slide-elem">
+                           <div class="slide-elem__leftside">
+                              <img class="leftside__img" src="./img/steam_hello.png" alt="">
+                           </div>
+                           <div class="slide-elem__rightside">
+                              <h1 class="rightside__title">dark beef burger</h1>
+                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя
+                                 кусочками
+                                 нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                              <div class="rightside__price"> 1500 <p>рублей</p>
+                                 <button class="rightside__price-button"></button>
+                              </div>
+                           </div>
+                        </li>
+                     </ul>
+                  </div>
+
+                  <div class="arrowRight">
+                     <a href="" class="arrow-right" id="right"></a>
+                  </div>
+
             </div>
          </div>
       </section>
