--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             </button>
          </div>
       </section>
-      <section class="section hover-menu" id="hover-menu">
+      <section class="section-hover hover-menu" id="hover-menu">
          <div class="container">
             <header class="hover-menu__header">
                <img class="logo" src="./img/logo.png" alt="логотип MrBurger">
@@ -106,7 +106,7 @@
       </section>
       <!-- окончание приветственой страницы -->
       <!-- начало страницы мы лучшие -->
-      <section class="section section--block-two">
+      <section  class="section section--block-two">
          <div class="container container__block-two">
             <div class="block-two__title">мы лучшие</div>
             <ul class="content__list">
@@ -148,11 +148,9 @@
       <section class="section burgers">
          <div class="container">
             <div class="burgers__menu">
-
                   <div class="arrowLeft">
                      <a href="" class="arrow-left" id="left"></a>
                   </div>
-
                   <div class="slider__block">
                      <ul class="slider-block__active" id="slider">
                         <li class="slide-elem">
@@ -161,8 +159,7 @@
                            </div>
                            <div class="slide-elem__rightside">
                               <h1 class="rightside__title">dark beef burger</h1>
-                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя
-                                 кусочками нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
                               <div class="rightside__price"> 500 <p>рублей</p>
                                  <button class="rightside__price-button"></button>
                               </div>
@@ -174,9 +171,7 @@
                            </div>
                            <div class="slide-elem__rightside">
                               <h1 class="rightside__title">dark beef burger</h1>
-                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя
-                                 кусочками
-                                 нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
                               <div class="rightside__price"> 1000 <p>рублей</p>
                                  <button class="rightside__price-button"></button>
                               </div>
@@ -188,9 +183,7 @@
                            </div>
                            <div class="slide-elem__rightside">
                               <h1 class="rightside__title">dark beef burger</h1>
-                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя
-                                 кусочками
-                                 нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
+                              <div class="rightside__text">Ваш старый добрый знакомый, с рубленым бифщтексом из 100% говядины, тремя кусочками нежнейшего сыра эмменталь, двумя помидорами и т.д. Короче вкуснее, чем в Маке! </div>
                               <div class="rightside__price"> 1500 <p>рублей</p>
                                  <button class="rightside__price-button"></button>
                               </div>
@@ -198,11 +191,9 @@
                         </li>
                      </ul>
                   </div>
-
                   <div class="arrowRight">
                      <a href="" class="arrow-right" id="right"></a>
                   </div>
-
             </div>
          </div>
       </section>
@@ -554,7 +545,7 @@
       <!-- окончание секции контакты -->
       <!-- начало fixed menu -->
       <ul class="fixed-menu">
-         <li class="fixed-menu__item fixed-menu__item--active">
+         <!-- <li class="fixed-menu__item fixed-menu__item--active">
             <button type="button" class="fixed-menu__dot"></button>
          </li>
          <li class="fixed-menu__item ">
@@ -580,11 +571,13 @@
          </li>
          <li class="fixed-menu__item ">
             <button type="button" class="fixed-menu__dot"></button>
-         </li>
+         </li> -->
       </ul>
       <!-- окончание fixed menu -->
       <div class="form__row-block"></div>
    </div>
+
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
    <script src="./script.js"></script>
 </body>
 
