--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
 
                <div id="controls" class="player__controls">
                   <div class="player__start">
-                     <a id="playBtn">погнали</a>
+                     <a class="play-button" id="playBtn"></a>
                   </div>
                   <div class="player__playback">
                      <progress id="progress" max="100" value="0"></progress>
@@ -417,7 +417,7 @@
                   </div>
                   <div class="player__duration">
                      <span id="progressTime">00:00</span>
-                     <span id="alltime">00:00</span>
+                     <span id="alltime">00:18</span>
                   </div>
                </div>
 
