--- a/index.html
+++ b/index.html
@@ -395,6 +395,7 @@
             </li>
          </ul>
       </section>
+      
       <section class="section work">
          <div class="container">
             <div class="title__work">как мы работаем</div>
@@ -403,7 +404,7 @@
 
                <div class="player__wrapper">
                   <video id="video" width="100%" height="85%">
-                     <source src="video/Hamburger - 1015.mp4" type="video/mp4" poster="">
+                     <source src="video/Car Washer - 6594.mp4" type="video/mp4" poster="">
                   </video>
                </div>
 
@@ -411,13 +412,18 @@
                   <div class="player__start">
                      <a class="play-button" id="playBtn"></a>
                   </div>
-                  <div class="player__playback">
-                     <progress id="progress" max="100" value="0"></progress>
-                     <!-- <input class="playback__way" type="range" step="0.01" min="0" max="100" value="50" id="volume" /> -->
-                  </div>
                   <div class="player__duration">
                      <span id="progressTime">00:00</span>
-                     <span id="alltime">00:18</span>
+                  </div>
+                  <div class="player__playback">
+                     <!-- <progress id="progress" max="100" value="0"></progress> -->
+                     <input class="playback__way" type="range" min="0" max="100" value="0" id="progress"/>
+                  </div>
+                  <div class="player__duration">
+                     <span id="alltime">00:19</span>
+                  </div>
+                  <div class="player__volume">
+                     <input class="playback__way" type="range" min="0" max="100" value="10" id="volume"/>
                   </div>
                </div>
 
@@ -509,8 +515,9 @@
          </div>
       </section>
       <section class="section contacts">
-         <iframe src="https://www.google.com/maps/d/embed?mid=1RRnPyPEW9mAEqwCymBAJpY05dmxynzLY" width="100%"
-            height="100%"></iframe>
+         <div id="map" class="map-container">
+            <iframe src="https://www.google.com/maps/d/embed?mid=1RRnPyPEW9mAEqwCymBAJpY05dmxynzLY" width="100%" height="100%"></iframe>
+         </div>
          <div class="container container__contacts">
             <footer class="footer">
                <address class="footer__contacts-tel">
